fix z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -101,6 +101,7 @@
       .nav-items {
         color: #ffffff;
         display: flex;
+        z-index: 10;
         font-weight: normal;
         font-size: 13px;
         align-items: center;
